force-app/main/default/objects/FIN_CompanyCode__c/FIN_CompanyCode__c.object-meta.xml
<CustomObject>
    <label>Company Code</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>