force-app/main/default/objects/FIN_CompanyCode__c/fields/FIN_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Company Codes</relationshipLabel>
    <relationshipName>Company_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>