force-app/main/default/objects/FIN_CompanyCode__c/fields/FIN_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Company Codes</relationshipLabel>
    <relationshipName>Company_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>