force-app/main/default/objects/FIN_CompanyCode__c/fields/FIN_Description__c.field-meta.xml
<CustomField>
    <fullName>FIN_Description__c</fullName>
    <label>Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>