force-app/main/default/objects/FIN_CompanyCode__c/recordTypes/FIN_SWE_Company_Code.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Company_Code</fullName>
    <active>true</active>
    <label>SWE Company Code</label>
</RecordType>