force-app/main/default/objects/FIN_CompanyCode__c/recordTypes/FIN_UK_Company_Code.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK_Company_Code</fullName>
    <active>true</active>
    <label>UK Company Code</label>
</RecordType>