force-app/main/default/objects/FIN_CompanyCode__c/recordTypes/FIN_US_Company_Code.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Company_Code</fullName>
    <active>true</active>
    <label>US Company Code</label>
</RecordType>