force-app/main/default/objects/FIN_CompanyCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_Description__c</columns>
    <columns>Region__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>FIN_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>